Revision history for Perl extension Log::Dispatch::FileRotate.

{{$NEXT}}
    - Fix minor POD error (Thanks Matthias Schmitz) [#47665]
    - Mark Log::Log4perl as a "test_requires" dependency.  Eventually this
      should be optional altogether for testing.
    - use Dist::Zilla to build the dist
    - move test.pl to t/basic.t

1.20 Sat Oct 01 2016
    - Fix Date::Manip warnings about deprecated TZ config variable. If
      Date::Manip 6.x or later is installed we now use SetDate instead.

1.19 Tue Oct 21 2008
    - Added patch from MS to solve bug 39900. Basically logs appearing slower
      than a recurrance cause the module to keep rotating logs. We now jump
      forward to the right recurrance interval. Thanks to the people at Yahoo
      who discovered it.

    - Updated dependancy on Log4Perl to 1.0

1.18 Wed Jun 25 12:19:11 EST 2008
    - rolled up issue with using Date::Manip internal function
    - added extra test for cygwin
    - added better tests for 'max' paramater
    - removed TZ details from doco and pointed people to Date::Manip
1.15 Wed Apr 26 08:09:20 EST 2006
    - Added GPL copyright notice to fit with Perl 5

1.14 Mon Apr 24 13:35:06 EST 2006
    - create copyright notice

1.13 Tue Mar  1 12:04:13 EST 2005
    - Went back to epoch times for comparisions. My comments above
      regarding Date::Manip and MacOSX are silly.
    - Added better lockfile name picking thanks to Stephen Gordon
    - Removed the $$ from the lockfile name as it makes it too uniq

1.12 Mon Feb 28 23:20:03 EST 2005
    - Added code to handle short running proggies like CGIs that want to
      use the DatePattern stuff. Now check mtime of log file to see if we
      need to rotate (at start up only).
    - Got rid of epochs as they conflict with Date::Manip's UnixDate()
      function on MacOSX. This slows us down quite a bit so I am using
      cmp instead of Date_Cmp() to get some speed back.
    - Fixed up some typos and removed some email addresses as requested.